// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarBody renders error when URL is restricted 1`] = `
<DocumentFragment>
  <div
    class="d-flex py-2 pl-2 pr-0 align-items-center"
  >
    <div
      class="mx-auto"
    >
      <img
        alt="PixieBrix logo"
        class="logo"
        data-testid="sidebarHeaderLogo"
        src="test-file-stub"
      />
    </div>
    <a
      class="button themeColorOverride btn btn-link btn-sm"
      href="chrome-extension://abcxyz/options.html"
      title="Open Extension Console"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-cog fa-w-16 "
        data-icon="cog"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M487.4 315.7l-42.6-24.6c4.3-23.2 4.3-47 0-70.2l42.6-24.6c4.9-2.8 7.1-8.6 5.5-14-11.1-35.6-30-67.8-54.7-94.6-3.8-4.1-10-5.1-14.8-2.3L380.8 110c-17.9-15.4-38.5-27.3-60.8-35.1V25.8c0-5.6-3.9-10.5-9.4-11.7-36.7-8.2-74.3-7.8-109.2 0-5.5 1.2-9.4 6.1-9.4 11.7V75c-22.2 7.9-42.8 19.8-60.8 35.1L88.7 85.5c-4.9-2.8-11-1.9-14.8 2.3-24.7 26.7-43.6 58.9-54.7 94.6-1.7 5.4.6 11.2 5.5 14L67.3 221c-4.3 23.2-4.3 47 0 70.2l-42.6 24.6c-4.9 2.8-7.1 8.6-5.5 14 11.1 35.6 30 67.8 54.7 94.6 3.8 4.1 10 5.1 14.8 2.3l42.6-24.6c17.9 15.4 38.5 27.3 60.8 35.1v49.2c0 5.6 3.9 10.5 9.4 11.7 36.7 8.2 74.3 7.8 109.2 0 5.5-1.2 9.4-6.1 9.4-11.7v-49.2c22.2-7.9 42.8-19.8 60.8-35.1l42.6 24.6c4.9 2.8 11 1.9 14.8-2.3 24.7-26.7 43.6-58.9 54.7-94.6 1.5-5.5-.7-11.3-5.6-14.1zM256 336c-44.1 0-80-35.9-80-80s35.9-80 80-80 80 35.9 80 80-35.9 80-80 80z"
          fill="currentColor"
        />
      </svg>
    </a>
  </div>
  <div
    class="full-height"
  >
    <div
      class="p-3"
    >
      <div
        class="font-weight-bold"
      >
        This is a restricted browser page.
      </div>
      <div
        class="mt-2"
      >
        PixieBrix cannot access this page.
      </div>
      <div
        class="mt-2"
      >
        To open the PixieBrix Sidebar, navigate to a website and then click the PixieBrix toolbar icon again.
      </div>
      <hr />
      <div
        class="mt-2"
      >
        Looking for the Extension Console? 
        <a
          href="chrome-extension://abcxyz/options.html"
        >
          Open the Extension Console
        </a>
      </div>
      <div
        class="mt-2"
      >
        Looking for the Page Editor? 
        <a
          href="https://www.pixiebrix.com/developers-welcome"
        >
          View the Developer Welcome Page
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SidebarBody renders with anonymous user 1`] = `
<DocumentFragment>
  <div
    class="d-flex py-2 pl-2 pr-0 align-items-center"
  >
    <div
      class="mx-auto"
    >
      <img
        alt="PixieBrix logo"
        class="logo"
        data-testid="sidebarHeaderLogo"
        src="test-file-stub"
      />
    </div>
    <a
      class="button themeColorOverride btn btn-link btn-sm"
      href="chrome-extension://abcxyz/options.html"
      title="Open Extension Console"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-cog fa-w-16 "
        data-icon="cog"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M487.4 315.7l-42.6-24.6c4.3-23.2 4.3-47 0-70.2l42.6-24.6c4.9-2.8 7.1-8.6 5.5-14-11.1-35.6-30-67.8-54.7-94.6-3.8-4.1-10-5.1-14.8-2.3L380.8 110c-17.9-15.4-38.5-27.3-60.8-35.1V25.8c0-5.6-3.9-10.5-9.4-11.7-36.7-8.2-74.3-7.8-109.2 0-5.5 1.2-9.4 6.1-9.4 11.7V75c-22.2 7.9-42.8 19.8-60.8 35.1L88.7 85.5c-4.9-2.8-11-1.9-14.8 2.3-24.7 26.7-43.6 58.9-54.7 94.6-1.7 5.4.6 11.2 5.5 14L67.3 221c-4.3 23.2-4.3 47 0 70.2l-42.6 24.6c-4.9 2.8-7.1 8.6-5.5 14 11.1 35.6 30 67.8 54.7 94.6 3.8 4.1 10 5.1 14.8 2.3l42.6-24.6c17.9 15.4 38.5 27.3 60.8 35.1v49.2c0 5.6 3.9 10.5 9.4 11.7 36.7 8.2 74.3 7.8 109.2 0 5.5-1.2 9.4-6.1 9.4-11.7v-49.2c22.2-7.9 42.8-19.8 60.8-35.1l42.6 24.6c4.9 2.8 11 1.9 14.8-2.3 24.7-26.7 43.6-58.9 54.7-94.6 1.5-5.5-.7-11.3-5.6-14.1zM256 336c-44.1 0-80-35.9-80-80s35.9-80 80-80 80 35.9 80 80-35.9 80-80 80z"
          fill="currentColor"
        />
      </svg>
    </a>
  </div>
  <div
    class="full-height"
  >
    <div
      class="container"
    >
      <div
        class="text-center mt-4"
      >
        <h4
          class="display-6"
        >
          Connect PixieBrix Account
        </h4>
        <p>
          Register/log-in to PixieBrix to access your personal and team bricks
        </p>
        <a
          class="mt-4 btn btn-primary"
          href="https://app.pixiebrix.com"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-sign-in-alt fa-w-16 "
            data-icon="sign-in-alt"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 448h-84c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h84c17.7 0 32-14.3 32-32V160c0-17.7-14.3-32-32-32h-84c-6.6 0-12-5.4-12-12V76c0-6.6 5.4-12 12-12h84c53 0 96 43 96 96v192c0 53-43 96-96 96zm-47-201L201 79c-15-15-41-4.5-41 17v96H24c-13.3 0-24 10.7-24 24v96c0 13.3 10.7 24 24 24h136v96c0 21.5 26 32 41 17l168-168c9.3-9.4 9.3-24.6 0-34z"
              fill="currentColor"
            />
          </svg>
           Connect Account
        </a>
      </div>
      <div
        class="text-center mt-4"
      >
        <img
          alt="Marketplace"
          src="test-file-stub"
          width="300"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SidebarBody renders with authenticated user 1`] = `
<DocumentFragment>
  <div
    class="d-flex py-2 pl-2 pr-0 align-items-center"
  >
    <div
      class="mx-auto"
    >
      <img
        alt="PixieBrix logo"
        class="logo"
        data-testid="sidebarHeaderLogo"
        src="test-file-stub"
      />
    </div>
    <a
      class="button themeColorOverride btn btn-link btn-sm"
      href="chrome-extension://abcxyz/options.html"
      title="Open Extension Console"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-cog fa-w-16 "
        data-icon="cog"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M487.4 315.7l-42.6-24.6c4.3-23.2 4.3-47 0-70.2l42.6-24.6c4.9-2.8 7.1-8.6 5.5-14-11.1-35.6-30-67.8-54.7-94.6-3.8-4.1-10-5.1-14.8-2.3L380.8 110c-17.9-15.4-38.5-27.3-60.8-35.1V25.8c0-5.6-3.9-10.5-9.4-11.7-36.7-8.2-74.3-7.8-109.2 0-5.5 1.2-9.4 6.1-9.4 11.7V75c-22.2 7.9-42.8 19.8-60.8 35.1L88.7 85.5c-4.9-2.8-11-1.9-14.8 2.3-24.7 26.7-43.6 58.9-54.7 94.6-1.7 5.4.6 11.2 5.5 14L67.3 221c-4.3 23.2-4.3 47 0 70.2l-42.6 24.6c-4.9 2.8-7.1 8.6-5.5 14 11.1 35.6 30 67.8 54.7 94.6 3.8 4.1 10 5.1 14.8 2.3l42.6-24.6c17.9 15.4 38.5 27.3 60.8 35.1v49.2c0 5.6 3.9 10.5 9.4 11.7 36.7 8.2 74.3 7.8 109.2 0 5.5-1.2 9.4-6.1 9.4-11.7v-49.2c22.2-7.9 42.8-19.8 60.8-35.1l42.6 24.6c4.9 2.8 11 1.9 14.8-2.3 24.7-26.7 43.6-58.9 54.7-94.6 1.5-5.5-.7-11.3-5.6-14.1zM256 336c-44.1 0-80-35.9-80-80s35.9-80 80-80 80 35.9 80 80-35.9 80-80 80z"
          fill="currentColor"
        />
      </svg>
    </a>
  </div>
  <div
    class="full-height"
  >
    <div
      class="full-height"
    >
      <div
        class="tabContainer nav nav-tabs nav-justified"
        role="tablist"
      >
        <div
          class="tabWrapper active nav-item"
        >
          <button
            aria-controls="panel-container-tabpane-static-modLauncher-panel"
            aria-selected="true"
            class="tabHeader nav-link active"
            data-rb-event-key="static-modLauncher-panel"
            id="panel-container-tab-static-modLauncher-panel"
            role="tab"
          >
            <span
              class="tabTitle"
            >
              Mods
            </span>
          </button>
          <button
            class="close"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
            <span
              class="sr-only"
            >
              Close
            </span>
          </button>
          <div
            class="tabDivider"
          />
        </div>
      </div>
      <div
        class="p-0 border-0 full-height scrollable-area bg-white tabContainer tab-content"
      >
        <div
          aria-hidden="false"
          aria-labelledby="panel-container-tab-static-modLauncher-panel"
          class="fade full-height paneOverrides tab-pane active show"
          id="panel-container-tabpane-static-modLauncher-panel"
          role="tabpanel"
        >
          <div
            class="emptyViewRoot"
          >
            <div>
              <p>
                We didn't find any mods to run
              </p>
              <h4>
                Don't worry, there's a solution
              </h4>
              <img
                alt="Workshop"
                class="illustration"
                src="test-file-stub"
              />
              <p>
                Some mods don't run on every page.
                <br />
                And other mods don't run in the Sidebar.
                <br />
                <br />
                Check that the mod is configured correctly.
              </p>
            </div>
            <p>
              Looking for new mods?
              <br />
              Check out the 
              <a
                href="https://www.pixiebrix.com/marketplace/"
              >
                PixieBrix Marketplace
              </a>
            </p>
          </div>
          <nav
            class="footer flex-grow-0 navbar navbar-expand navbar-light"
          >
            <button>
              Learn: Open the Page Editor
            </button>
            <span
              class="mx-2"
            >
              •
            </span>
             
            <a
              href="https://docs.pixiebrix.com/"
            >
              Documentation
            </a>
          </nav>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
